reserve section modified with more contnt

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -82,7 +82,7 @@
   </div>
   <div id="review-history" class="row" style="display: none;">
     <div class="col">
-      <p>hi
+      <p>hi there 
       </p>
     </div>
   </div>
