API sample added

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -82,8 +82,12 @@
   </div>
   <div id="review-history" class="row" style="display: none;">
     <div class="col">
-      <p>hi there 
-      </p>
+      <dl>
+        <dt>Total Number of users</dt>
+        <dd><a href="https://mono-api-dashboard.herokuapp.com/">https://mono-api-dashboard.herokuapp.com/</a></dd>
+        <dt>Total Number of users</dt>
+        <dd><a href="https://mono-api-dashboard.herokuapp.com/">https://mono-api-dashboard.herokuapp.com/</a></dd>
+      </dl>
     </div>
   </div>
 </div>
