--- a/application/templates/navigation.html
+++ b/application/templates/navigation.html
@@ -6,6 +6,6 @@
       <a id="reviewed" class="nav-link font-weight-bold" href="">Reviewed Conversations</a>
     </li>
     <li class="nav-item">
-      <a id="history"class="nav-link font-weight-bold" href="">Reserved</a>
+      <a id="history"class="nav-link font-weight-bold" href="">Dashboard APIs</a>
     </li>
   </ul>
