Some APIs added

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -83,10 +83,13 @@
   <div id="review-history" class="row" style="display: none;">
     <div class="col">
       <dl>
-        <dt>Total Number of users</dt>
-        <dd><a href="https://mono-api-dashboard.herokuapp.com/">https://mono-api-dashboard.herokuapp.com/</a></dd>
-        <dt>Total Number of users</dt>
-        <dd><a href="https://mono-api-dashboard.herokuapp.com/">https://mono-api-dashboard.herokuapp.com/</a></dd>
+        <dt>Total Number of users or conversations</dt>
+        <dd><a href="https://mono-api-dashboard.herokuapp.com/analytics/totalusers" target="_blank">https://mono-api-dashboard.herokuapp.com/analytics/totalusers</a></dd>
+        <dt>Interaction time in seconds</dt>
+        <dd><a href="https://mono-api-dashboard.herokuapp.com/analytics/interactive-sessions" target="_blank">https://mono-api-dashboard.herokuapp.com/analytics/interactive-sessions</a></dd>
+        <dt>Unidentified Message Summary</dt>
+        <dd><a href="https://mono-api-dashboard.herokuapp.com/analytics/analytics/unidentified-message-summary" target="_blank">https://mono-api-dashboard.herokuapp.com/analytics/analytics/unidentified-message-summary</a></dd>
+        
       </dl>
     </div>
   </div>
